--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@
     }
         div img:hover{
             filter:drop-shadow(16px 16px 20px blue);
-            transform: scale(3, 2.4);;
+            filter: contrast(110%);
+            transform: scale(3.2, 2.9);
         }
 
 
