--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
             filter: contrast(110%);
             transform: scale(3.2, 2.9);
         }
-body{
+.{
         background-colour=green;
 }
 
